# Socket_Python_C-_Demo

./: CMakeLists.txt  README.md  cpp_client.cpp  python_server.py
